src/objects/Strategy__c.object
<CustomObject>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Strategy</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stategy_Description__c</fullName>
        <label>Strategy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Push</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piece &amp; Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Strategy</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>